--- a/about.html
+++ b/about.html
@@ -40,6 +40,7 @@
     </section>
 
     <section id="about">
+        <h2>About</h2>
         <h2>SketchMe Studio:</h2>
         <h1>Turn Your Photos into Artwork</h1>
         <h4>Your Photos, Your Style, Your Art</h4>
