--- a/about.html
+++ b/about.html
@@ -40,8 +40,69 @@
     </section>
 
     <section id="about">
-        <h2>About</h2>
         <h2>SketchMe Studio:</h2>
         <h1>Turn Your Photos into Artwork</h1>
         <h4>Your Photos, Your Style, Your Art</h4>
     </section>
+
+    <section id="newsletter" class="section-p1 section-m1">
+        <div class="newstext">
+            <h4>Sign Up for newsletter</h4>
+            <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="Your email address">
+            <button class="normal">Sign Up</button>
+        </div>
+    </section>
+
+    <footer class="section-p1" style="background-color: aliceblue;">
+        <div class="col">
+            <img class="logo" src="images/logo/logofinal.png" alt="">
+            <h4>Contact</h4>
+            <p><strong>Address: </strong> Himmatpur Malla, Haldwani - 263139, India</p>
+            <p><strong>E-mail: </strong> sketchmestudio@gmail.com</p>
+            <p><strong>Hours: </strong> 10:00 - 18:00, Mon - Sat</p>
+            <div class="follow">
+                <h4>Follow Us</h4>
+                <div class="icon">
+                    <i class="fa-brands fa-facebook fa-2xl" style="color: rgb(0, 0, 100);"></i>
+                    <i class="fa-brands fa-instagram fa-2xl" style="color: #bf0db0;"></i>
+                    <i class="fa-brands fa-twitter fa-2xl" style="color: #43a7f4;"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">About us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Contact Us</a>
+        </div>
+
+        <div class="col">
+            <h4>My Account</h4>
+            <a href="#">Sign In</a>
+            <a href="#">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Track My Order</a>
+            <a href="#">Help</a>
+        </div>
+        <div class="col row">
+            <div class="paym">
+            <p>Secured Payment Gateways </p>
+            <img src="images/logo/social/pay.png" alt="">
+            </div>
+        </div>
+
+        <div class="copyright">
+            <p>2024, sketchMe Studio etc - HTML CSS Ecommerce Website</p>        
+        </div>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/5eb1eade1d.js"></script>
+    <script src="javascript.js"></script>
+</body>
+</html>
